css/main.css
/* Fonts */
@font-face {
  font-family: Paintball;
  src: url("../fonts/paintball.otf") format("opentype");
}

/* General */
*{
  transition: all 0.2s ease-out;
}

body{
  background: url(../img/background.jpg) rgb(0,0,0);
  text-align: center;
  color: rgb(200,200,200);
  font-size: 16px;
  line-height: 1.7;
  padding-top: 100px;
  font-family: 'Roboto', sans-serif;
}

a{
  color: rgb(255,120,50);
}

a:hover{
  color: rgb(255,180,10);
  text-decoration: none;
}

/* Nav */
.navbar{
  background: rgba(5,5,5,0.97);
  min-height: 75px;
  border: none;
}

.navbar-right {
    margin-right: 0px;
}

.navbar-nav > li > a{
  padding-top: 30px;
  padding-bottom: 24px;
}

.navbar-brand{
  margin-right: 20px;
}

.nav-legend{
  padding-top: 27px;
  opacity: .5;
}

.nav-legend li:first-child{
  font-weight: bold;
  text-transform: uppercase;
}

.nav-legend li span{
  height: 8px;
  width: 8px;
  display: block;
  float: left;
  margin: 9px 4px 0 10px;
  border-radius: 20px;
  opacity: 1;
}

/* Content */
.container-faq{
  text-align: left;
}

.container-faq article{
  padding-bottom: 30px;
}

.map{
  max-width: 600px;
  padding: 40px;
  background: rgba(0,0,0,1);
  margin: 0 auto;
  margin-bottom: 60px;
  border-radius: 10px;
  border: 1px solid rgba(255,255,255,.1);

}

.map h2, .container-faq h2{
  font-family: Paintball, sans-serif;
  font-weight: bold;
  color: rgb(230,230,230);
  text-shadow: 2px 2px 1px black, 3px 3px 0 rgb(170,220,0);
}

.map img{
  width: 100%;
  max-width: 520px;
  padding: 20px 0;
}

/* Graph */
.graph-overall{
  max-width: 480px;
  width: 95%;
  height: 36px;
  margin: 0 auto;
  margin-top: 20px;
  border-radius: 3px;
  overflow: hidden;
}

.graph-small{
  max-width: 480px;
  width: 95%;
  height: 10px;
  margin: 0 auto;
  margin-top: 20px;
  margin-bottom: 20px;
  border-radius: 3px;
  overflow: hidden;
  background: rgba(255,255,255,.1);
}

.graph-small:hover{
  background: rgba(255,255,255,.15);
}

.graph-divider{
  height: 10px;
  margin: 60px  0px 40px 0;
  width: 100%;
  border-top: 1px solid rgba(255,255,255,.1);
}

.divider-text{
  font-size: 12px;
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  color: rgba(255,255,255,.4);
  position: relative;
  margin-top: -10px;
  letter-spacing: 1px;
}

.divider-text span{
  background: rgb(0,0,0);
  padding: 4px 5px;
  border-radius: 3px;
  border: 1px solid rgba(255,255,255,.2);
}

.graph-name{
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  margin-left: 28px;
  margin-bottom: -15px;
  color: rgba(255,255,255,0.4);
  text-align: left;
  letter-spacing: 1px;
}

.bar{
  height: 100%;
  float: left;
  font-size: 10px;
}

.bar a{
  display: block;
  width: 100%;
  height: 100%;
  cursor: default;
  text-decoration: none;
  text-shadow: 0 1px 0 rgba(255,255,255,.2);
  color: rgba(0,0,0,.6);
  opacity: 0;
  padding: 5px 0;
  font-size: 16px;
  font-weight: bold;
}

.bar a:hover{
  opacity: 1;
}

.splatzones{
  background: rgb(260,120,50);
  opacity: 0.8;
  box-shadow: inset -1px 0px 0px 0px rgba(0,0,0,1);
}

.towercontrol{
  background: rgb(160,225,20);
  opacity: 0.8;
}
.rainmaker{
  background: rgb(150,95,240);
  opacity: 0.8;
  box-shadow: inset 1px 0px 0px 0px rgba(0,0,0,1);
}

.splatzones:hover, .towercontrol:hover, .rainmaker:hover{
  opacity: 1;
}

/* Footer */
footer{
  text-align: left;
  margin-top: 30px;
  background: rgba(0,0,0,.9);
  border-top: 1px solid rgba(255,255,255,.1);
}

footer .container{
  padding: 30px 20px;
}

.last-update{
  color: rgba(255,255,255,.2);
  font-size: 14px;
}

footer strong{
  text-transform: uppercase;
  padding-right: 12px;
}

.heart{
  color: rgb(235,60,50);
}

